--- a/Minigin/Minigin.vcxproj
+++ b/Minigin/Minigin.vcxproj
@@ -188,17 +188,21 @@
     <ClInclude Include="..\3rdParty\imgui\imstb_rectpack.h" />
     <ClInclude Include="..\3rdParty\imgui\imstb_textedit.h" />
     <ClInclude Include="..\3rdParty\imgui\imstb_truetype.h" />
+    <ClInclude Include="AddPlayerScoreCommand.h" />
     <ClInclude Include="Command.h" />
     <ClInclude Include="Component.h" />
     <ClInclude Include="Font.h" />
     <ClInclude Include="FpsComponent.h" />
-    <ClInclude Include="GameActorCommand.h" />
+    <ClInclude Include="GameObjectCommand.h" />
     <ClInclude Include="GameObject.h" />
     <ClInclude Include="GameTime.h" />
-    <ClInclude Include="MoveHorizontalComponent.h" />
+    <ClInclude Include="HealthObserver.h" />
+    <ClInclude Include="KillPlayerCommand.h" />
+    <ClInclude Include="Observer.h" />
     <ClInclude Include="InputManager.h" />
     <ClInclude Include="MoveCommands.h" />
-    <ClInclude Include="MoveVerticalComponent.h" />
+    <ClInclude Include="PlayerHealthComponent.h" />
+    <ClInclude Include="PlayerScoreComponent.h" />
     <ClInclude Include="PlotComponent.h" />
     <ClInclude Include="Minigin.h" />
     <ClInclude Include="Renderer.h" />
@@ -206,6 +210,7 @@
     <ClInclude Include="RotatorComponent.h" />
     <ClInclude Include="Scene.h" />
     <ClInclude Include="SceneManager.h" />
+    <ClInclude Include="ScoreObserver.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="TextureRenderComponent.h" />
     <ClInclude Include="TextComponent.h" />
@@ -228,9 +233,11 @@
     <ClCompile Include="FpsComponent.cpp" />
     <ClCompile Include="GameObject.cpp" />
     <ClCompile Include="GameTime.cpp" />
-    <ClCompile Include="MoveHorizontalComponent.cpp" />
+    <ClCompile Include="HealthObserver.cpp" />
     <ClCompile Include="InputManager.cpp" />
-    <ClCompile Include="MoveVerticalComponent.cpp" />
+    <ClCompile Include="Observer.cpp" />
+    <ClCompile Include="PlayerHealthComponent.cpp" />
+    <ClCompile Include="PlayerScoreComponent.cpp" />
     <ClCompile Include="PlotComponent.cpp" />
     <ClCompile Include="Main.cpp" />
     <ClCompile Include="Minigin.cpp" />
@@ -239,6 +246,7 @@
     <ClCompile Include="RotatorComponent.cpp" />
     <ClCompile Include="Scene.cpp" />
     <ClCompile Include="SceneManager.cpp" />
+    <ClCompile Include="ScoreObserver.cpp" />
     <ClCompile Include="TextureRenderComponent.cpp" />
     <ClCompile Include="TextComponent.cpp" />
     <ClCompile Include="Texture2D.cpp" />
